# MSIregNN-o

./: .bumpversion.cfg  .cruft.json  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/MSIregNN/: __init__.py  __main__.py  api.py  cli.py  msiData.py  version.py
src/MSIregNN/DLIR/: DLIR.py  DLIR_multi_res.py  __init__.py
src/MSIregNN/metrics/: __init__.py  mi.py
src/MSIregNN/mi/: __init__.py  mi.py
src/MSIregNN/stn/: __init__.py  spatial_transformer.py  stn-cnn.py
src/MSIregNN/stn_affine/: __init__.py  spatial_transformer_affine.py
src/MSIregNN/stn_bspline/: spatial_transformer_bspline.py
src/NNreg/: __init__.py  version.py
src/NNreg/DLIR/: DLIR.py  __init__.py
src/NNreg/mi/: __init__.py
src/NNreg/stn/: stn-cnn.py
src/NNreg/stn_bspline/: __init__.py
tests/: __init__.py  test_version.py
