##########################
# Setup.py Configuration #
##########################
[metadata]
name = MSIregNN
version = 0.0.1-dev
description = A neural network framework for coregistration of mass spectrometry images with other modalities
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/sslakkimsetty/MSIregNN
download_url = https://github.com/sslakkimsetty/MSIregNN/releases
project_urls =
    Tracker = https://github.com/sslakkimsetty/MSIregNN/issues
    Source = https://github.com/sslakkimsetty/MSIregNN
    Documentation = https://MSIregNN.readthedocs.io

# Author information
author = Sai Srikanth Lakkimsetty
author_email = saislakkimsetty@gmail.comm
maintainer = Sai Srikanth Lakkimsetty
maintainer_email = saislakkimsetty@gmail.comm

# License Information. This can be any valid SPDX identifiers that can be resolved
# with URLs like https://spdx.org/licenses/MIT
license = MIT
license_files =
    LICENSE

# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    mass spectrometry imaging
    mass spectrometry images
    MS images
    H&E images
    Histology images
    Bioinformatics
    Biology
    Image analysis
    Coregistration
    Registration
    Deep learning
    Neural networks

[options]
# What versions of Python are supported?
python_requires = <3.12

# Installation requirements
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here

# Override questionable defaults, don't worry about these
zip_safe = false
include_package_data = True

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    # Remove if your project doesn't use Pydantic
    autodoc_pydantic
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    MSIregNN = MSIregNN.cli:main

